# xiaomi-unlock-request

./: .gitignore  AGENTS.md  README.md  pyproject.toml  unlock.py
.beads/: issues.jsonl
.github/: release-template.md
.github/workflows/: release.yml
src/xiaomi_unlock/: __init__.py  cli.py  config.py  core.py  ui.py
tests/: __init__.py  test_config.py  test_core.py  test_worker.py
