[project]
name = "xiaomi-unlock-request"
version = "2.0.0"
description = "Xiaomi bootloader unlock request — AQLR method, NTP-synced to midnight Beijing time"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13",
    "httpx>=0.27.0",
    "ntplib>=0.4.0",
]

[project.scripts]
mi-unlock = "xiaomi_unlock.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xiaomi_unlock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pyinstaller>=6",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
